--- a/index.html
+++ b/index.html
@@ -2,15 +2,50 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Omnifood is a premium food delivery service with the mission to bring affordable and healty meals to as many people as possible.">
+
   <link rel="stylesheet" href="vendors/css/normalize.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
   <link rel="stylesheet" href="vendors/css/ionicons.min.css">
+  <link rel="stylesheet" href="vendors/css/animate.css">
   <link rel="stylesheet" href="resources/css/styles.css">
   <link rel="stylesheet" href="resources/css/queries.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap" rel="stylesheet">
-  <meta charset="utf-8">
   <title>Omnifood</title>
+
+  <link rel="apple-touch-icon" sizes="57x57" href="resources/favicons/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="resources/favicons/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="resources/favicons/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="resources/favicons/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="resources/favicons/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="resources/favicons/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="resources/favicons/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="resources/favicons/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="resources/favicons/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="resources/favicons/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="resources/favicons/favicon-194x194.png" sizes="194x194">
+  <link rel="icon" type="image/png" href="resources/favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="resources/favicons/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="resources/favicons/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="resources/favicons/manifest.json">
+  <link rel="shortcut icon" href="resources/favicons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-TileImage" content="resources/favicons/mstile-144x144.png">
+  <meta name="msapplication-config" content="resources/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170102381-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-170102381-1');
+</script>
+
 </head>
 
 <body>
@@ -19,22 +54,24 @@
     <nav>
       <div class="row">
         <img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
-        <ul class="main-nav">
-          <li><a href="#">Food delivery</a></li>
-          <li><a href="#">How it works</a></li>
-          <li><a href="#">Our cities</a></li>
-          <li><a href="#">Sign up</a></li>
+        <img src="resources/img/logo.png" alt="Omnifood logo" class="logo-black">
+        <ul class="main-nav js--main-nav">
+          <li><a href="#features">Food delivery</a></li>
+          <li><a href="#works">How it works</a></li>
+          <li><a href="#cities">Our cities</a></li>
+          <li><a href="#plans">Sign up</a></li>
         </ul>
+        <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
       </div>
     </nav>
     <div class="hero-text-box">
       <h1>Goodbye junk food.<br />Hello super healthy meals.</h1>
-      <a class="btn btn-full" href="#">I'm hungry</a>
-      <a class="btn btn-ghost" href="#">Show me more</a>
+      <a class="btn btn-full js--scroll-to-plan" href="#">I'm hungry</a>
+      <a class="btn btn-ghost js--scroll-to-start" href="#">Show me more</a>
     </div>
   </header>
 
-  <section class="section-features">
+  <section class="section-features js--section-features" id="features">
     <div class="row">
       <h2>Get food fast &mdash; not fast food.</h2>
       <p class="long-copy">
@@ -42,7 +79,7 @@
       </p>
     </div>
 
-    <div class="row">
+    <div class="row js--wp-1">
       <div class="col span-1-of-4 box">
         <i class="ion-ios-infinite-outline icon-big"></i>
         <h3>Up to 365 days/year</h3>
@@ -125,14 +162,14 @@
     </ul>
   </section>
 
-  <section class="section-steps">
+  <section class="section-steps" id="works">
     <div class="row">
       <h2>How it works &mdash; Simple as 1, 2, 3</h2>
     </div>
 
     <div class="row">
       <div class="col span-1-of-2 steps-box">
-        <img src="resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen">
+        <img src="resources/img/app-iPhone.png" alt="Omnifood app on iPhone" class="app-screen js--wp-2">
       </div>
       <div class="col span-1-of-2 steps-box">
         <div class="works-step">
@@ -157,11 +194,11 @@
 
   </section>
 
-  <section class="section-cities">
+  <section class="section-cities" id="cities">
     <div class="row">
       <h2>We're currently in these cities</h2>
     </div>
-    <div class="row">
+    <div class="row js--wp-3">
       <div class="col span-1-of-4 box">
         <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
         <h3>Lisbon</h3>
@@ -241,34 +278,34 @@
       <div class="col span-1-of-3">
         <blockquote>
           Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
-          <cite><img src="resources/img/customer-1.jpg" alt="">Alberto Duncan</cite>
+          <cite><img src="resources/img/customer-1.jpg" alt="Customer 1 photo">Alberto Duncan</cite>
         </blockquote>
       </div>
 
       <div class="col span-1-of-3">
         <blockquote>
           Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
-          <cite><img src="resources/img/customer-2.jpg" alt="">Joana Silva</cite>
+          <cite><img src="resources/img/customer-2.jpg" alt="Customer 2 photo">Joana Silva</cite>
         </blockquote>
       </div>
 
       <div class="col span-1-of-3">
         <blockquote>
           I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
-          <cite><img src="resources/img/customer-3.jpg" alt="">Milton Chapman</cite>
+          <cite><img src="resources/img/customer-3.jpg" alt="Customer 3 photo">Milton Chapman</cite>
         </blockquote>
       </div>
 
     </div>
   </section>
 
-  <section class="section-plans">
+  <section class="section-plans js--section-plans" id="plans">
     <div class="row">
       <h2>Start eating healthy today</h2>
     </div>
     <div class="row">
       <div class="col span-1-of-3">
-        <div class="plan-box">
+        <div class="plan-box js--wp-4">
           <div class="">
             <h3>Premium</h3>
             <p class="plan-price">$399 <span>/ month</span></p>
@@ -427,11 +464,14 @@
       <p>Copyright &copy; 2020 by Omnifood. All rights reserved.</p>
     </div>
   </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+  <script src="resources/js/script.js"></script>
+
 </body>
 
 </html>
-
-<!--
-Also include links to facebook, twitter, google+ and Instagram accounts.
-
- -->
